--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,3 +15,19 @@ services:
       - frontera
     ports:
       - "8000:8000"
+
+  frontera-db:
+    container_name: frontera-db
+    hostname: frontera-db
+    restart: always
+    image: postgres:14.2
+    environment:
+      - POSTGRES_DB=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    volumes:
+      - ./data/db:/var/lib/postgresql/data
+    networks:
+      - frontera
+    ports:
+      - "5444:5432"
