--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django >= 4
+Django == 4.0.4
 djangorestframework >= 3.13
 psycopg2-binary >= 2.9
 django-environ >=0.8
@@ -8,4 +8,4 @@ djoser >= 2.1
 drf-yasg >= 1.20
 gunicorn >=20.1
 psycopg2 >=2.9
-
+python-dotenv
